# make-ipinyou-data

./: .env.example  .gitignore  Justfile  README.md  duckdb_pipeline.py  justfile  load_dataset.py  pyproject.toml
core/: __init__.py  unzip.py
core/unzip_bz2/: __init__.py  decompress_file.py  ensure_sequence.py  filter_bz2.py  normalize_cores.py  unzip.py  unzip_bz2.py
python/: formalizeua.py  mkdata.py  mktest.py  mkyzx.py  splitadvertisers.py
src/make_ipinyou_data/utils/: __init__.py  decompress.py  progress.py  user_agent.py
